--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Sans+Condensed&display=swap" rel="stylesheet">
     <title>MartiMoto</title>
 </head>
 <body>
