--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Zilla+Sans+Condensed&display=swap" rel="stylesheet">
-    <title>MartiMoto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
