--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Keania+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Keania+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     
+    <script
+      type="text/javascript"
+      charset="UTF-8"
+      src="//cdn.cookie-script.com/s/868a22a3baf5e34037bd5ef017c2e42f.js"
+      defer
+    ></script>
+
 </head>
 <body>
     
