working on new page for tyres

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Keania+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Keania+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <script
       type="text/javascript"
       charset="UTF-8"
